Table Client {
  id int [pk, increment]
  name varchar(255) [not null]
  email varchar(255) [not null, unique]
  password_hash varchar(255) [not null]
  registration_date date [not null, default: `CURRENT_DATE`]
}

Table Category {
  id int [pk, increment]
  name varchar(255) [not null, unique]
  description text
}

Table Product {
  id int [pk, increment]
  category_id int [not null, ref: > Category.id]
  sku varchar(100) [not null, unique]
  name varchar(255) [not null]
  description text
  price decimal(10,2) [not null, default: 0.00]
  quantity int [not null, default: 0]
  is_active boolean [not null, default: true]
  material varchar(100)
  brand varchar(100)
}

Table "Order" {
  id int [pk, increment]
  client_id int [not null, ref: > Client.id]
  order_date date [not null, default: `CURRENT_DATE`]
  status varchar(50) [not null, default: 'new']
  total decimal(10,2) [not null, default: 0.00]
}

Table OrderItem {
  order_id int [not null, ref: > Order.id]
  product_id int [not null, ref: > Product.id]
  quantity int [not null, default: 1]
  price decimal(10,2) [not null]
  indexes {
    (order_id, product_id) [pk]
  }
}

